_deploy/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
spec:
  selector:
    app.kubernetes.io/name: react-frontend
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
