_deploy/kustomize/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: react-frontend

spec:
  http:
  - name: react-frontend
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: react-frontend
        port:
          number: 5173
